AP-21251: Fixes handling of absolute URLs in "Change Link Type"
AP-21251 (Cannot change component link type when it is workflow-relative)